Phoenix Tutorials started

--- a/Phoenix-Examples/discuss/web/templates/layout/app.html.eex
+++ b/Phoenix-Examples/discuss/web/templates/layout/app.html.eex
@@ -10,24 +10,22 @@
     <title>Hello Discuss!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   </head>
 
   <body>
-    <div class="container">
-      <%# <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
-        </nav>
-        <span class="logo"></span>
-      </header> %>
 
-      <nav class="light-blue">
-          <div class="nav-wrapper container">
-              <a href="/" class="brand-logo"> Discussions </a>
-          </div>
-      </nav>
+    <nav class="light-blue">
+      <div class="nav-wrapper container">
+        <a href="/" class="brand-logo"> Discussions </a>
+      </div>
+    </nav>
+
+    <div class="container">
+      <header class="header">
+        
+      </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
@@ -38,5 +36,6 @@
 
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    
   </body>
 </html>
