--- a/Phoenix-Examples/discuss/web/templates/page/index.html.eex
+++ b/Phoenix-Examples/discuss/web/templates/page/index.html.eex
@@ -16,6 +16,9 @@
       <li>
         <a href="https://github.com/phoenixframework/phoenix">Source</a>
       </li>
+       <li>
+        <a href="https://www.google.com">Google</a>
+      </li>
     </ul>
   </div>
 
@@ -30,10 +33,6 @@
       </li>
       <li>
         <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
-      </li>
-
-      <li>
-       <a href="https://www.google.com">@google</a>
       </li>
     </ul>
   </div>
